# DeviantTools-Math_Engine-Libray

./: CMakeLists.txt  README.md
src/: Mat2.cpp  Mat3.cpp  Mat4.cpp  Quat.cpp  Vec2.cpp  Vec3.cpp  Vec4.cpp  main.cpp
src/ext/: Mat2_rotclock.cpp  Mat2_rotcounterc.cpp  Mat3_rotX.cpp  Mat3_scale.cpp  Mat4_scale.cpp  Vec3_euler.cpp
vd1m/vd1m/: Mat2.hpp  Mat3.hpp  Mat4.hpp  Quat.hpp  Vec2.hpp  Vec3.hpp  Vec4.hpp  vd1m.hpp
vd1m/vd1m/ext/: Mat2_rotclock.hpp  Mat2_rotcounterc.hpp  Mat3_rotX.hpp  Mat3_scale.hpp  Mat4_scale.hpp  Vec3_euler.hpp
